# breathing-cat

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
breathing_cat/: __main__.py  build.py  config.py  find_version.py
breathing_cat/resources/doxygen/: Doxyfile.in
breathing_cat/resources/sphinx/: conf.py.in  index.rst.in
mpiis_doc_build/: __main__.py  build.py  find_version.py
tests/: test_build.py  test_config.py  test_find_version.py
tests/test_packages/ros_pkg/include/ros_pkg/: foo.hpp
