[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "breathing_cat"
description = "Tool to build documentation for C++/Python-Packages used at MPI-IS"
authors = [
    {name = "Maximilien Naveau"},
    {name = "Felix Widmaier"},
]
maintainers = [
    {name = "Felix Widmaier", email = "felix.widmaier@tuebingen.mpg.de"}
]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]

dependencies = [
    "breathe",
    "myst-parser",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-moderncmakedomain",
    "tomli",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
bcat = "breathing_cat.__main__:main"

[tool.setuptools.package-data]
breathing_cat = ["resources/**/*.in"]

[tool.setuptools.dynamic]
version = {attr = "breathing_cat.__version__"}
